Network connectivity check and minor fixes/logs